feat: enable search with multiple types and statuses (MAPCO-4427, MAPCO-4430) (#41)
* feat: enable search with multiple types and statuses

* fix: prettier

* fix: pr changes

* fix: pr changes

* fix: rename to plural

* fix: Define `ts-jest` config under `globals` is deprecated
